--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #footer {
   width: 100%;
   background-color: #444;
-  color: #ccc;
+  color: #fff;
   font-size: 10pt;
   letter-spacing: 1px;
   padding: 25px 0px;
@@ -60,7 +60,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  height: 60px;
   background-color: #252831;
   text-align:center;
 }
@@ -71,9 +71,13 @@ nav h1 {
 nav h1 a {
   color: #fff;
   font-size: 10pt;
-  font-weight: 80;
+  font-weight: 70;
   letter-spacing: 5px;
   text-transform: uppercase;
+}
+nav h1 a: hover {
+  color: orange;
+  font-weight: 80;
 }
 #breadcrumb {
   max-width: 100%;
@@ -112,11 +116,16 @@ nav h1 a {
     text-decoration: underline;
 }
 /* ====================== Map ====================== */
+#map-container{
+  height: 400px;
+  width: 100%;
+}
 #map {
   height: 400px;
   width: 100%;
   background-color: #ccc;
   margin: 0 auto;
+
 }
 /* ====================== Restaurant Filtering ====================== */
 #filter{
@@ -127,7 +136,7 @@ nav h1 a {
   flex-grow: 1;
   flex-direction: column;
   width: 100%;
-  background-color: black;
+  background-color:#252831;
   align-items: center;
   padding: 10px 0px;
 }
@@ -202,10 +211,10 @@ nav h1 a {
   font-size: 10pt;
   width: 100%;
   padding-left: 5px;
+  font-weight: 500;
 }
 #restaurants-list li a {
   background-color: orange;
-  border-bottom: 3px solid #eee;
   width:40%;
   color: #fff;
   display: inline-block;
@@ -215,6 +224,12 @@ nav h1 a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+  font-weight: 600;
+}
+
+#restaurants-list li a:hover{
+  color: black;
+  outline-color: white;
 }
 
 /* ====================== Restaurant Details ====================== */
@@ -224,6 +239,7 @@ nav h1 a {
 .inside #map{
   background-color:white;
   width: 100%;
+  height: 400px;
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
@@ -357,13 +373,13 @@ nav h1 a {
   background-color: #333333;
   border: 1px solid #333333;
   margin: 0;
-  padding: 20px 20px 0 20px;
+  padding: 2px 20px 0 20px;
 }
 
 #reviews-list li p:nth-of-type(3n) {
   margin: 20px;
   padding: 5px 10px;
-  background-color: #ffa500;
+  background-color: orange;
   color: white;
   font-weight: 500;
   display: inline-block;
